base characters logic
