# api/routes/api.php
@@ -3,8 +3,9 @@
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\StaticGameDataController;
+use App\Http\Controllers\CharacterController;
 
-// Префикс "auth" для всех маршрутов авторизации
+
 Route::prefix('auth')->group(function () {
 
     Route::post('/register', [AuthController::class, 'register']);
@@ -17,6 +18,16 @@ Route::prefix('auth')->group(function () {
     });
 });
 
+Route::middleware('auth:sanctum')->prefix('characters')->group(function () {
+    Route::get('/', [CharacterController::class, 'index']);        // список всех
+    Route::get('/search', [CharacterController::class, 'search']); // поиск по имени
+    Route::get('/{id}', [CharacterController::class, 'show']);     // получить по ID
+    Route::post('/', [CharacterController::class, 'store']);       // создать
+    Route::put('/{id}', [CharacterController::class, 'update']);   // обновить
+    Route::delete('/{id}', [CharacterController::class, 'destroy']); // удалить
+});
+
+Route::middleware('auth:sanctum')->get('/users/{userId}/characters', [CharacterController::class, 'getByUser']);
 
 Route::prefix('static')->group(function () {
 
